# illustration

./: .buildinfo  README.md  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
_modules/: index.html
_modules/illustration/: __main__.html  _imageio.html  base.html  caching.html  cli.html  config.html  credentials.html  curation.html  errors.html  expansion.html  facade.html  inspection.html  persistence.html  registry.html  reranking.html  schema.html  sequence.html  translation.html  video.html
_modules/illustration/providers/: openverse.html  pexels.html  pixabay.html  wikimedia.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: illustration.rst.txt
_sources/module_docs/illustration/: __main__.rst.txt  _imageio.rst.txt  base.rst.txt  caching.rst.txt  cli.rst.txt  config.rst.txt  credentials.rst.txt  curation.rst.txt  errors.rst.txt  expansion.rst.txt  facade.rst.txt  inspection.rst.txt  persistence.rst.txt  providers.rst.txt  registry.rst.txt  reranking.rst.txt  schema.rst.txt  sequence.rst.txt  translation.rst.txt  video.rst.txt
_sources/module_docs/illustration/providers/: openverse.rst.txt  pexels.rst.txt  pixabay.rst.txt  wikimedia.rst.txt
illustration/: __init__.py  __main__.py  _imageio.py  base.py  caching.py  cli.py  config.py  credentials.py  curation.py  errors.py  expansion.py  facade.py  inspection.py  persistence.py  registry.py  reranking.py  schema.py  sequence.py  translation.py  video.py
illustration/providers/: __init__.py  openverse.py  pexels.py  pixabay.py  wikimedia.py
misc/docs/: illustration_kickoff_prompt.md
misc/docs/design/: illustration_design.md
misc/docs/research/: illustration_01 -- Cross-Modal Text-to-Image Retrieval Over an Existing Image Corpus -- A Technical Architecture for reelee.md  illustration_02 -- Agentic Multimodal Retrieval for Screenplay-to-Animation Pipelines.md  illustration_03 -- Image Source API Audit for Commercial-Adjacent Video Production (2026).md
module_docs/: illustration.html
module_docs/illustration/: __main__.html  _imageio.html  base.html  caching.html  cli.html  config.html  credentials.html  curation.html  errors.html  expansion.html  facade.html  inspection.html  persistence.html  providers.html  registry.html  reranking.html  schema.html  sequence.html  translation.html  video.html
module_docs/illustration/providers/: openverse.html  pexels.html  pixabay.html  wikimedia.html
tests/: test_base.py  test_caching.py  test_cli.py  test_credentials.py  test_curation.py  test_expansion.py  test_facade.py  test_imageio.py  test_inspection.py  test_openverse.py  test_persistence.py  test_pexels.py  test_pixabay.py  test_registry.py  test_reranking.py  test_schema.py  test_sequence.py  test_translation.py  test_video.py  test_wikimedia.py
