[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "illustration"
version = "0.0.2"
description = "agentic semantic image retrieval"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "image-retrieval",
    "image-search",
    "stock-images",
    "cross-modal",
    "semantic-search",
    "openverse",
    "pexels",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "pydantic>=2",
    "requests",
    "dol",
    "config2py",
    "argh",
]

[project.scripts]
illustration = "illustration.__main__:main"

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/illustration"
Repository = "https://github.com/thorwhalen/illustration"
Documentation = "https://thorwhalen.github.io/illustration"

[project.optional-dependencies]
rerank = [
    "transformers>=4.45",
    "torch>=2.0",
    "pillow>=10",
    "numpy>=1.24",
]
# Layer 2 — agentic curation (the bounded CRAG loop). aix is the multi-provider
# AI facade (query expansion + VLM caption/judge); ir is the retrieval substrate
# (fuse_hits + select). pillow/numpy power the classical-CV pre-filters. The
# NSFW gate and SigLIP rerank additionally need the [rerank] extra — install
# illustration[rerank,curate] for the full precision pipeline.
curate = [
    "aix",
    "ir",
    "pillow>=10",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
    "tests",
    "illustration",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
